--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -2,11 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/splashFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".main.activities.SplashActivity">
-
+        tools:context="fragments.SplashFragment">
 
         <ImageView
             android:id="@+id/appName"
@@ -26,9 +27,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
             android:indeterminate="true"
+            android:indeterminateDuration="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:indeterminateDuration="2"
             app:layout_constraintTop_toBottomOf="@id/appName" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
