--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:gravity="center"
-                    android:text="Filter By:"
+                    android:text="Select City:"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintTop_toTopOf="parent" />
